--- a/paper-fab-speed-dial.html
+++ b/paper-fab-speed-dial.html
@@ -1,4 +1,11 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../paper-fab/paper-fab.html">
+<link rel="import" href="../iron-icons/iron-icons.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../neon-animation/neon-animation-runner-behavior.html">
+<link rel="import" href="../neon-animation/animations/scale-up-animation.html">
+<link rel="import" href="../neon-animation/animations/scale-down-animation.html">
+<link rel="import" href="../neon-animation/animations/cascaded-animation.html">
 
 <!--
 `paper-fab-speed-dial`
@@ -9,12 +16,30 @@ A floating action button flinging out related actions
 
 <dom-module id="paper-fab-speed-dial">
   <template>
-    <style>
-      :host {
-        display: block;
+    <style include="iron-flex iron-flex-alignment iron-flex-reverse"> 
+      .container {        
+        @apply(--layout-vertical-reverse);
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+      }
+
+      .dropdown-content {      
+        @apply(--layout-vertical-reverse);
+      }
+
+      .dropdown-content paper-fab {
+        margin: 0px 8px 10px 8px;
       }
     </style>
-    <h2>Hello [[prop1]]</h2>
+    <div class="container">        
+        <paper-fab icon="add" class="dropdown-trigger main-fab" on-tap="toggle"></paper-fab>
+        <div class="dropdown-content" id="menu" hidden>
+          <paper-fab mini icon="star-border" class="item"></paper-fab>
+          <paper-fab mini icon="star-half" class="item"></paper-fab>
+          <paper-fab mini icon="star" class="item"></paper-fab>
+        </div>
+    </div>
   </template>
 
   <script>
@@ -22,12 +47,47 @@ A floating action button flinging out related actions
 
       is: 'paper-fab-speed-dial',
 
+      behaviors: [
+        Polymer.NeonAnimationRunnerBehavior
+      ],
+
       properties: {
-        prop1: {
-          type: String,
-          value: 'paper-fab-speed-dial',
-        },
+        active: Boolean,
+        animationConfig: {
+          value: function() {
+            var items = Polymer.dom(this.root).querySelectorAll('.item');
+            var array = Array.prototype.slice.call(items);
+            var reversed = Array.prototype.slice.call(items).reverse();
+            return {
+              'entry': {
+                name: 'cascaded-animation',
+                animation: 'scale-up-animation',
+                nodes: array
+              },
+              'exit': {
+                name: 'cascaded-animation',
+                animation: 'scale-down-animation',
+                nodes: reversed
+              }
+            }
+          }
+        }
       },
+
+      toggle: function () {      
+        this.$.menu.hidden = false;
+        this.active = !this.active; 
+        var animation = this.active ? 'entry' : 'exit';  
+        this.playAnimation(animation);       
+      },
+
+      listeners: {
+        'neon-animation-finish': '_onNeonAnimationFinish'
+      },
+
+      _onNeonAnimationFinish: function() {
+        this.$.menu.hidden = !this.active;
+      }
 
     });
   </script>
