--- a/paper-fab-speed-dial.html
+++ b/paper-fab-speed-dial.html
@@ -33,7 +33,7 @@ A floating action button flinging out related actions
       }
     </style>
     <div class="container">        
-      <paper-fab icon="add" class="dropdown-trigger main-fab" on-tap="toggle"></paper-fab>
+      <paper-fab icon="add" class="dropdown-trigger main-fab"></paper-fab>
       <div class="dropdown-content" id="menu" hidden>
         <paper-fab mini icon="star-border" class="item"></paper-fab>
         <paper-fab mini icon="star-half" class="item"></paper-fab>
@@ -50,6 +50,11 @@ A floating action button flinging out related actions
       behaviors: [
         Polymer.NeonAnimationRunnerBehavior
       ],
+
+      ready: function() {
+        var fab = this.$$(".container>paper-fab");
+        this.listen(fab, 'tap', 'toggle');
+      },
 
       properties: {
         active: Boolean,
