--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,8 @@
 
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
+    <link rel="import" href="../../paper-fab/paper-fab.html">
+    <link rel="import" href="../../iron-icons/iron-icons.html">
 
     <link rel="import" href="../paper-fab-speed-dial.html">
 
@@ -25,7 +27,14 @@
       <demo-snippet>
         <template>
           <div class="screen">
-            <paper-fab-speed-dial></paper-fab-speed-dial>
+            <paper-fab-speed-dial>      
+              <paper-fab icon="add"></paper-fab>
+              <div class="dropdown-content">
+                <paper-fab mini icon="star-border"></paper-fab>
+                <paper-fab mini icon="star-half"></paper-fab>
+                <paper-fab mini icon="star"></paper-fab>
+              </div>
+            </paper-fab-speed-dial>
           </div>
         </template>
       </demo-snippet>
