Add usage details

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,16 +23,16 @@
   <body>
 
     <div class="vertical-section-container centered">
-      <h3>Basic paper-fab-speed-dial Demo</h3>
+      <h3>Basic paper-fab-speed-dial demo</h3>
       <demo-snippet>
         <template>
           <div class="screen">
             <paper-fab-speed-dial>      
               <paper-fab icon="add"></paper-fab>
               <div class="dropdown-content">
-                <paper-fab mini icon="star-border"></paper-fab>
-                <paper-fab mini icon="star-half"></paper-fab>
-                <paper-fab mini icon="star"></paper-fab>
+                <paper-fab mini icon="rowing"></paper-fab>
+                <paper-fab mini icon="weekend"></paper-fab>
+                <paper-fab mini icon="pets"></paper-fab>
               </div>
             </paper-fab-speed-dial>
           </div>
