Override hidden style, fix #1

--- a/paper-fab-speed-dial.html
+++ b/paper-fab-speed-dial.html
@@ -29,6 +29,10 @@ A floating action button flinging out related actions
       .container ::content > .dropdown-content paper-fab {
         margin: 0px 8px 10px 8px;
       }
+      
+      .container ::content > .dropdown-content[hidden] { 
+        display: none !important;
+      }
 
     </style>
     <div class="container">  
