--- a/paper-fab-speed-dial.html
+++ b/paper-fab-speed-dial.html
@@ -14,98 +14,102 @@ A floating action button flinging out related actions
 
 <dom-module id="paper-fab-speed-dial">
   <template>
-    <style include="iron-flex iron-flex-alignment iron-flex-reverse"> 
-      .container {        
-        @apply(--layout-vertical-reverse);
-        position: absolute;
-        bottom: 10px;
-        right: 10px;
-      }
+	<style include="iron-flex iron-flex-alignment iron-flex-reverse">
+	  .container {
+		@apply(--layout-vertical-reverse);
+		position: absolute;
+		bottom: 10px;
+		right: 10px;
+	  }
 
-      .container ::content > .dropdown-content {
-        @apply(--layout-vertical-reverse);
-      }
+	  .container {
+		@apply(--paper-fab-speed-dial);  !important;
+	  }
 
-      .container ::content > .dropdown-content paper-fab {
-        margin: 0px 8px 10px 8px;
-      }
-      
-      .container ::content > .dropdown-content[hidden] { 
-        display: none !important;
-      }
+	  .container ::content > .dropdown-content {
+		@apply(--layout-vertical-reverse);
+	  }
 
-    </style>
-    <div class="container">  
-      <content>
-      </content>
-    </div>
+	  .container ::content > .dropdown-content paper-fab {
+		margin: 0px 8px 10px 8px;
+	  }
+
+	  .container ::content > .dropdown-content[hidden] {
+		display: none !important;
+	  }
+
+	</style>
+	<div class="container">
+	  <content>
+	  </content>
+	</div>
   </template>
 
   <script>
-    Polymer({
+	Polymer({
 
-      is: 'paper-fab-speed-dial',
+	  is: 'paper-fab-speed-dial',
 
-      behaviors: [
-        Polymer.NeonAnimationRunnerBehavior
-      ],
+	  behaviors: [
+		Polymer.NeonAnimationRunnerBehavior
+	  ],
 
-      ready: function() {
-        var button = this._getTriggerElement();
-        var menu = this._getDropdownContent();
-        this.listen(button, 'tap', 'toggle');
-        menu.hidden = !this.active;
-      },
+	  ready: function(){
+		var button = this._getTriggerElement();
+		var menu = this._getDropdownContent();
+		this.listen(button, 'tap', 'toggle');
+		menu.hidden = !this.active;
+	  },
 
-      properties: {
-        active: Boolean,
-        animationConfig: {
-          value: function() {
-            var menu = this._getDropdownContent();
-            var items = menu.children;
-            var array = Array.prototype.slice.call(items);
-            var reversed = Array.prototype.slice.call(items).reverse();
-            return {
-              'entry': {
-                name: 'cascaded-animation',
-                animation: 'scale-up-animation',
-                nodes: array
-              },
-              'exit': {
-                name: 'cascaded-animation',
-                animation: 'scale-down-animation',
-                nodes: reversed
-              }
-            }
-          }
-        }
-      },
+	  properties: {
+		active: Boolean,
+		animationConfig: {
+		  value: function(){
+			var menu = this._getDropdownContent();
+			var items = menu.children;
+			var array = Array.prototype.slice.call(items);
+			var reversed = Array.prototype.slice.call(items).reverse();
+			return {
+			  'entry': {
+				name: 'cascaded-animation',
+				animation: 'scale-up-animation',
+				nodes: array
+			  },
+			  'exit': {
+				name: 'cascaded-animation',
+				animation: 'scale-down-animation',
+				nodes: reversed
+			  }
+			}
+		  }
+		}
+	  },
 
-      toggle: function () {    
-        var menu = this._getDropdownContent();
-        menu.hidden = false;
-        this.active = !this.active; 
-        var animation = this.active ? 'entry' : 'exit';  
-        this.playAnimation(animation);       
-      },
+	  toggle: function(){
+		var menu = this._getDropdownContent();
+		menu.hidden = false;
+		this.active = !this.active;
+		var animation = this.active ? 'entry' : 'exit';
+		this.playAnimation(animation);
+	  },
 
-      listeners: {
-        'neon-animation-finish': '_onNeonAnimationFinish'
-      },
+	  listeners: {
+		'neon-animation-finish': '_onNeonAnimationFinish'
+	  },
 
-      _onNeonAnimationFinish: function() {
-        var menu = this._getDropdownContent();
-        menu.hidden = !this.active;
-      },
+	  _onNeonAnimationFinish: function(){
+		var menu = this._getDropdownContent();
+		menu.hidden = !this.active;
+	  },
 
-      _getTriggerElement: function() {
-        return this.queryEffectiveChildren(':first-child');
-      },
+	  _getTriggerElement: function(){
+		return this.queryEffectiveChildren(':first-child');
+	  },
 
-      _getDropdownContent: function() {
-        return this.queryEffectiveChildren('.dropdown-content');
-      }
+	  _getDropdownContent: function(){
+		return this.queryEffectiveChildren('.dropdown-content');
+	  }
 
-    });
+	});
   </script>
 </dom-module>
