--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>paper-fab-speed-dial</title>
+    <title>paper-fab-speed-dials</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../webcomponentsjs/webcomponents-lite.js"></script>
